Set vertical beight to auto to avoid images getting squished on some browsers

--- a/startbootstrap-one-page-wonder-gh-pages/css/one-page-wonder.css
+++ b/startbootstrap-one-page-wonder-gh-pages/css/one-page-wonder.css
@@ -44,7 +44,7 @@ body {
 }
 
 .featurette-image {
-  height: 450px;
+  height: auto;
   width: 450px;
 }
 
